# vrc-mcp-proxy

./: .gitignore  README.md  pyproject.toml
docs/: bump-runbook.md  design.md  upstream-issue-execute-code-roslyn-hang.md
src/vrc_mcp_proxy/: __init__.py  __main__.py  allowlist.py  canary.py  config.py  envelope.py  instances.py  proxy.py
src/vrc_mcp_proxy/baseline/: canary-baseline-10.1.0.json
src/vrc_mcp_proxy/transforms/: __init__.py  execute_code.py  manage_asset.py  read_console.py  timeouts.py
tests/: fake_upstream.py  real_stdio_launcher.py  test_allowlist.py  test_canary.py  test_config.py  test_execute_code.py  test_instances.py  test_manage_asset.py  test_proxy.py  test_read_console.py  test_relay_e2e.py  test_timeouts.py
tools/: capture_baseline.py  repro_driver.py
