[project]
name = "vrc-mcp-proxy"
version = "0.1.0"
description = "Owned stdio MCP interception proxy wrapping the pinned MCP-for-Unity server."
requires-python = ">=3.10"
dependencies = []

[project.scripts]
vrc-mcp-proxy = "vrc_mcp_proxy.proxy:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/vrc_mcp_proxy"]

[tool.hatch.build.targets.wheel.force-include]
"src/vrc_mcp_proxy/baseline" = "vrc_mcp_proxy/baseline"

[dependency-groups]
dev = ["pytest>=8"]

[tool.pytest.ini_options]
testpaths = ["tests"]
